--- a/.gitignore
+++ b/.gitignore
@@ -4,21 +4,72 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# Dependency directories
+node_modules/
+.pnp
+.pnp.js
+
+# Vite build output
+dist/
+
+# Vite cache
+.vite/
+.vitepress/
+
+# Tailwind CSS
+tailwind.config.js
+tailwind.config.cjs
+tailwind.config.mjs
+
+# Firebase
+firebase-debug.log
+.firebase/
+.firebaserc
+firebase.json
+
+# Editor-specific files
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# System files
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
+
+# Environment variables
+.env
+.env.local
+.env.development
+.env.production
+.env.test
+.env.*.local
+
+# Debug and stack traces
+*.stackdump
+*.stacktrace
+
+# Coverage directory
+coverage/
+
+# JetBrains IDEs
+*.iml
+out/
+
+# Miscellaneous
+*.bak
+*.swp
+*.tmp
+*.temp
+
+# Ignore build output from frameworks
+out/
+output/
+build/
